--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -56,7 +56,6 @@ html {
   font-size: var(--default-font-size);
   font-weight: var(--weight-normal);
   line-height: 1.5;
-  letter-spacing: -1px;
 }
 
 body {
